--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1>Hola {{ title }}</h1>
+      <!--<h1>Hola {{ title }}</h1>
       <p>{{ grupo }}</p>
 
       <h3>
@@ -29,7 +29,13 @@
       <hr>
       <app-ievn></app-ievn>
       <hr>
-      <app-ird></app-ird>
+      <br>
+      <br>
+      <app-ird></app-ird>-->
+      <br>
+      <app-suma></app-suma>
+      <hr>
+      <app-operas-bas></app-operas-bas>
     </div>
   </div>
 </div>
