--- a/src/app/utl/ird/ird.component.html
+++ b/src/app/utl/ird/ird.component.html
@@ -1,30 +1,43 @@
-<div class="container">
-  <div class="row">
-    <div class="coo-md-6">
-      <table class="table table-dark text-center" *ngIf="alumnos.length">
+<div class="card">
+  <div class="card-header">
+    Lista Alumnos
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-2">Filtrar por:</div>
+      <div class="col-md-4">
+        <input type="text" class="form-control" [(ngModel)]="listFilter" name="filter">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Filtro: {{ listFilter }}</h3>
+      </div>
+    </div>
+    <div class="table-responsive">
+      <table class="table table-light text-center" *ngIf="alumnos.length">
 
         <thead>
 
           <tr>
-            <th>
-              <button class="btn btn-primary">Mostrar Imagen</button>
-            </th>
+            <th><button (click)="showImagen()" class="btn btn-outline-dark">Mostrar Imagen</button></th>
             <th>Matricula</th>
             <th>Nombre</th>
             <th>Edad</th>
             <th>Correo</th>
             <th>Pago</th>
-            <th>Foto</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let alumno of alumnos">
+            <td>
+              <img *ngIf="muestraImg" [src]="alumno.foto" [style.width.px]="imageWidth" [style.margin.px]="imageMargin">
+            </td>
             <td>{{ alumno.matricula }}</td>
             <td>{{ alumno.nombre | uppercase }}</td>
             <td>{{ alumno.edad }}</td>
             <td>{{ alumno.correo }}</td>
             <td>{{ alumno.pago | currency }}</td>
-            <td><img src="{{ alumno.foto }}" alt="" height="100" width="100" style="border-radius: 50%;"></td>
           </tr>
         </tbody>
       </table>
